# webrtc-p2p

./: CMakeLists.txt  ReadMe.md  docker-compose.yml
api/: CMakeLists.txt  Dockerfile  api_server.cpp
api/static/: index.html  script.js  styles.css
signaling/: CMakeLists.txt  Dockerfile  signaling_server.cpp
